# accn_to_fasta

./: Cargo.toml  README.md
src/: main.rs
test/: accn.list  header.list  korean_to_fasta.py  pre_test.fna  test.fna
