[package]
name = "accn_to_fasta"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
flate2 = "1"
bzip2 = "0.4"
zstd = "0.13"
xz2 = "0.1"
